--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,14 @@
     margin: 0;
     padding: 0;
 }
+
+section {
+    padding: 20px 0;
+    text-align: center;
+}
+
+@media only screen and (max-width: 1000px) {
+
+
+
+}
